gatekeeper/constraints/constraints.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowedImageTags
metadata:
  name: disallow-latest-image-tag
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  enforcementAction: deny
  match:
    namespaces: ["demo"]
    kinds:
    - apiGroups: [""]
      kinds: ["Pod"]
    - apiGroups: ["apps"]
      kinds: ["Deployment"]
    - apiGroups: ["argoproj.io"]
      kinds: ["Rollout"]
  parameters:
    tags: ["latest"]
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLimits
metadata:
  name: require-cpu-memory-limits
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  enforcementAction: deny
  match:
    namespaces: ["demo"]
    kinds:
    - apiGroups: [""]
      kinds: ["Pod"]
    - apiGroups: ["apps"]
      kinds: ["Deployment"]
    - apiGroups: ["argoproj.io"]
      kinds: ["Rollout"]
  parameters:
    limits: ["cpu", "memory"]
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowRunAsRoot
metadata:
  name: disallow-runasuser-root
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  enforcementAction: deny
  match:
    namespaces: ["demo"]
    kinds:
    - apiGroups: [""]
      kinds: ["Pod"]
    - apiGroups: ["apps"]
      kinds: ["Deployment"]
    - apiGroups: ["argoproj.io"]
      kinds: ["Rollout"]
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowHostNetwork
metadata:
  name: disallow-hostnetwork
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  enforcementAction: deny
  match:
    namespaces: ["demo"]
    kinds:
    - apiGroups: [""]
      kinds: ["Pod"]
    - apiGroups: ["apps"]
      kinds: ["Deployment"]
    - apiGroups: ["argoproj.io"]
      kinds: ["Rollout"]
---
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sMaxReplicas
metadata:
  name: max-deployment-replicas
  annotations:
    argocd.argoproj.io/sync-wave: "1"
spec:
  enforcementAction: deny
  match:
    namespaces: ["demo"]
    kinds:
    - apiGroups: ["apps"]
      kinds: ["Deployment"]
  parameters:
    maxReplicas: 5
